Color indicated for red and blue checkers

--- a/portfolio-app/src/App.css
+++ b/portfolio-app/src/App.css
@@ -15,3 +15,18 @@ body{
     background-color: lightblue;
 
 }
+
+Button{
+    width:50px;
+    height:50px;
+}
+
+.red_checker{
+    background-color: red;
+    border: none
+}
+
+.blue_checker{
+    background-color: blue;
+    border: none
+}
