added css for chosen red and chosen blue and chosen neighbors

--- a/portfolio-app/src/App.css
+++ b/portfolio-app/src/App.css
@@ -30,3 +30,11 @@ Button{
     background-color: blue;
     border: none
 }
+
+.red_chosen{
+    background-color: rgb(250, 35, 35, 0.5);
+}
+
+.neighbor_chosen{
+    background-color: rgb(212, 206, 206);
+}
